# GNU-Linux

./: README.md  iproute2-5.2.0.tar.xz  meson.build  psmisc-23.2.tar.xz
base/: nano-4.5.tar.xz  shadow-4.7.tar.xz
base/grep-3.3/: ChangeLog  Makefile.in  THANKS  aclocal.m4  config.hin  configure
base/grep-3.3/doc/: Makefile.in  stamp-vti
base/grep-3.3/gnulib-tests/: Makefile.in  gnulib.mk  (+3 more)
base/psmisc-23.2/: ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
base/sed-4.7/: ChangeLog  Makefile.in  aclocal.m4  config_h.in  configure
base/shadow-4.7/: Makefile.in  aclocal.m4  config.h.in  configure
base/tar-1.32/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
core/: man-db-2.8.6.1.tar.xz  man-pages-5.02.tar.xz
core/eudev-3.2.8/: Makefile.in  aclocal.m4  config.h.in  configure
core/findutils-4.6.0/: Makefile.in  aclocal.m4  config.h.in  configure  tool-versions.txt
core/gdbm-1.18.1/: ChangeLog  Makefile.in  NEWS  TODO  autoconf.h.in  configure  configure.ac
core/gettext-0.20.1/: ChangeLog  Makefile.in  aclocal.m4  configure
core/kbd-2.2.0/: Makefile.in  aclocal.m4  aminclude_static.am  config.h.in  configure
core/kmod-26/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure
core/libcap-2.27/: Make.Rules
core/man-db-2.8.6.1/: .gitignore  ChangeLog  ChangeLog-2013  Makefile.am  NEWS  README  bootstrap.conf  configure.ac  release.sh
core/man-db-2.8.6.1/docs/: HACKING  INSTALL.quick  Makefile.am  man-db.lsm
core/man-db-2.8.6.1/include/: README  comp_src.h.in  manconfig.h.in
core/man-db-2.8.6.1/init/: Makefile.am
core/man-db-2.8.6.1/init/systemd/: Makefile.am  man-db.conf.in  man-db.service.in
core/man-db-2.8.6.1/lib/: Makefile.am  README  cleanup.c  debug.c  decompress.c  encodings.c  glcontainers.c  linelength.c  orderfiles.c  sandbox.c  security.c  util.c
core/man-db-2.8.6.1/libdb/: Makefile.am  README  db_btree.c  db_delete.c  db_gdbm.c  db_lookup.c  db_ndbm.c  db_storage.h  db_store.c  db_ver.c  mydbm.h
core/man-db-2.8.6.1/m4/: man-arg-automatic-create.m4  man-arg-automatic-update.m4  man-arg-cache-owner.m4  man-arg-cats.m4  man-arg-config-file.m4  man-arg-db.m4  man-arg-device.m4  man-arg-mandirs.m4  man-arg-manual.m4  man-arg-override-dir.m4  man-arg-sections.m4  man-arg-setuid.m4  man-arg-systemdsystemunitdir.m4  man-arg-systemdtmpfilesdir.m4  man-arg-undoc.m4  man-bdb.m4  man-check-progs.m4  man-compress-lib.m4  man-gnu-nroff.m4  man-heirloom-nroff.m4  man-libseccomp.m4  man-linguas.m4  man-po4a.m4  man-tar-sort-name.m4  man-trans-subst.m4
core/man-db-2.8.6.1/man/: LINGUAS.po4a  Makefile.am  Rules.man  THANKS  check-man  replace.sin.in
core/man-db-2.8.6.1/man/da/: Makefile.am
core/man-db-2.8.6.1/man/de/: Makefile.am
core/man-db-2.8.6.1/man/es/: Makefile.am
core/man-db-2.8.6.1/man/fr/: Makefile.am  translator.add
core/man-db-2.8.6.1/man/id/: Makefile.am
core/man-db-2.8.6.1/man/it/: Makefile.am
core/man-db-2.8.6.1/man/it/man1/: apropos.man1  man.man1  manpath.man1  whatis.man1  zsoelim.man1
core/man-db-2.8.6.1/man/it/man5/: manpath.man5
core/man-db-2.8.6.1/man/it/man8/: accessdb.man8  catman.man8  mandb.man8
core/man-db-2.8.6.1/man/ja/: Makefile.am
core/man-db-2.8.6.1/man/man1/: apropos.man1  lexgrog.man1  man.man1  manconv.man1  manpath.man1  whatis.man1  zsoelim.man1
core/man-db-2.8.6.1/man/man5/: manpath.man5
core/man-db-2.8.6.1/man/man8/: accessdb.man8  catman.man8  mandb.man8
core/man-db-2.8.6.1/man/nl/: Makefile.am
core/man-db-2.8.6.1/man/pl/: Makefile.am  translator.add
core/man-db-2.8.6.1/man/po4a/: Makefile.am  po4a.cfg
core/man-db-2.8.6.1/man/po4a/Locale/Po4a/: Manext.pm
core/man-db-2.8.6.1/man/po4a/po/: da.po  de.po  es.po  fr.po  id.po  ja.po  man-db-manpages.pot  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sv.po  tr.po  zh_CN.po
core/man-db-2.8.6.1/man/pt/: Makefile.am
core/man-db-2.8.6.1/man/pt_BR/: Makefile.am
core/man-db-2.8.6.1/man/ru/: Makefile.am
core/man-db-2.8.6.1/man/sr/: Makefile.am
core/man-db-2.8.6.1/man/sv/: Makefile.am
core/man-db-2.8.6.1/man/tr/: Makefile.am
core/man-db-2.8.6.1/man/zh_CN/: Makefile.am
core/man-db-2.8.6.1/manual/: Makefile.am  README  comp.me  db.me  files.me  format.me  glossary.me  intro.me  leader.me  man_db.me  misc.me  options-only.me  print-options  sec.me
core/man-db-2.8.6.1/patches/: argp-domain.patch  fdutimens-hurd.patch
core/man-db-2.8.6.1/po/: LINGUAS  POTFILES.in  ast.po  ca.po  cs.po  da.po  de.po  eo.po  es.po  fi.po  fr.po  id.po  it.po  ja.po  man-db.pot  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  tr.po  vi.po  zh_CN.po  zh_TW.po
core/man-db-2.8.6.1/src/: Makefile.am  accessdb.c  catman.c  check_mandirs.c  check_mandirs.h  compression.c  descriptions.c  globbing_test.c  lexgrog.l  lexgrog_test.c  man.c  man_db.conf.in  manconv.c  mandb.c  manp.c  manpath.c  straycats.c  whatis.c  zsoelim.l  zsoelim_main.c
core/man-db-2.8.6.1/src/tests/: Makefile.am  fspause.c  lexgrog-1  lexgrog-2  lexgrog-3  man-1  man-10  man-11  man-2  man-3  man-4  man-5  man-6  man-7  man-8  man-9  manconv-1  manconv-2  manconv-3  mandb-1  mandb-2  mandb-3  mandb-4  mandb-5  mandb-6  mandb-7  testlib.sh  whatis-1  zsoelim-1
core/man-db-2.8.6.1/tools/: Makefile.am  README  checkman  mandb_fmt-script  mkcatdirs
core/man-pages-5.02/: proj.man-pages.desc  proj.man-pages.pages
extra/intltool-0.51.0/: Makefile.in  configure  configure.ac  intltool-update.in
init/: sysvinit-2.95.tar.xz
sys/bison-3.4.1/: ChangeLog  Makefile.in  aclocal.m4  configure
sys/check-0.12.0/: check_stdint.h
sys/libpipeline-1.5.1/: .gitignore  ChangeLog  ChangeLog-2013  Makefile.am  NEWS  README  TODO  bootstrap.conf  configure.ac  release.sh
sys/libpipeline-1.5.1/lib/: Makefile.am  libpipeline.pc.in
sys/libpipeline-1.5.1/m4/: pipeline-socketpair.m4  pipeline-tar-sort-name.m4
sys/libpipeline-1.5.1/man/: Makefile.am
sys/libpipeline-1.5.1/tests/: Makefile.am  argstr.c  basic.c  common.c  common.h  exec.c  inspect.c  pump.c  read.c  redirect.c
sys/meson-0.52.0/: setup.cfg
(+2499 files in other folders)
