# GNU/Linux basesytem build file
#============================================================================




# init
#============================================================================


# init project
#-------------------------------------------------
project(
    'nix',
    language : [
        'c',
        'cpp']
    version : run_command('cat', './.version').stdout().strip(),
    license : 'MIT'
)